docs/Compiler/CS143/labs/assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 9 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 123 conflicts: 9 shift/reduce
State 135 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID INHERITS TYPEID '{' features '}'
    5      | CLASS TYPEID '{' features '}'

    6 features: %empty
    7         | feature ';'
    8         | features feature ';'

    9 feature: method_declaration
   10        | attr_declaration

   11 method_declaration: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'

   12 attr_declaration: OBJECTID ':' TYPEID
   13                 | OBJECTID ':' TYPEID ASSIGN expr

   14 formals: %empty
   15        | formal
   16        | formals ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr: OBJECTID ASSIGN expr
   19     | dispatch_expression
   20     | IF expr THEN expr ELSE expr FI
   21     | WHILE expr LOOP expr POOL
   22     | '{' expr_block '}'
   23     | LET let_expr
   24     | CASE expr OF branches ESAC
   25     | NEW TYPEID
   26     | ISVOID expr
   27     | expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | '~' expr
   32     | expr '<' expr
   33     | expr LE expr
   34     | expr '=' expr
   35     | NOT expr
   36     | '(' expr ')'
   37     | OBJECTID
   38     | INT_CONST
   39     | STR_CONST
   40     | BOOL_CONST

   41 branches: branch ';'
   42         | branches branch ';'

   43 branch: OBJECTID ':' TYPEID DARROW expr

   44 let_expr: OBJECTID ':' TYPEID ASSIGN expr IN expr
   45         | OBJECTID ':' TYPEID IN expr
   46         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   47         | OBJECTID ':' TYPEID ',' let_expr

   48 expr_block: expr ';'
   49           | expr_block expr ';'

   50 dispatch_expression: expr '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr '.' OBJECTID '(' exprs ')'
   52                    | OBJECTID '(' exprs ')'

   53 exprs: %empty
   54      | expr
   55      | exprs ',' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 36 50 51 52
    ')' (41) 11 36 50 51 52
    '*' (42) 29
    '+' (43) 27
    ',' (44) 16 46 47 55
    '-' (45) 28
    '.' (46) 50 51
    '/' (47) 30
    ':' (58) 11 12 13 17 43 44 45 46 47
    ';' (59) 7 8 41 42 48 49
    '<' (60) 32
    '=' (61) 34
    '@' (64) 50
    '{' (123) 4 5 11 22
    '}' (125) 4 5 11 22
    '~' (126) 31
    error (256)
    CLASS (258) 4 5
    ELSE (259) 20
    FI (260) 20
    IF (261) 20
    IN (262) 44 45
    INHERITS (263) 4
    LET (264) 23
    LOOP (265) 21
    POOL (266) 21
    THEN (267) 20
    WHILE (268) 21
    CASE (269) 24
    ESAC (270) 24
    OF (271) 24
    DARROW (272) 43
    NEW (273) 25
    ISVOID (274) 26
    STR_CONST <symbol> (275) 39
    INT_CONST <symbol> (276) 38
    BOOL_CONST <boolean> (277) 40
    TYPEID <symbol> (278) 4 5 11 12 13 17 25 43 44 45 46 47 50
    OBJECTID <symbol> (279) 11 12 13 17 18 37 43 44 45 46 47 50 51 52
    ASSIGN (280) 13 18 44 46
    NOT (281) 35
    LE (282) 33
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5
        on right: 2 3
    features <features> (49)
        on left: 6 7 8
        on right: 4 5 8
    feature <feature> (50)
        on left: 9 10
        on right: 7 8
    method_declaration <feature> (51)
        on left: 11
        on right: 9
    attr_declaration <feature> (52)
        on left: 12 13
        on right: 10
    formals <formals> (53)
        on left: 14 15 16
        on right: 11 16
    formal <formal> (54)
        on left: 17
        on right: 15 16
    expr <expression> (55)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 11 13 18 20 21 24 26 27 28 29 30 31 32 33 34 35 36 43 44 45 46 48 49 50 51 54 55
    branches <cases> (56)
        on left: 41 42
        on right: 24 42
    branch <case_> (57)
        on left: 43
        on right: 41 42
    let_expr <expression> (58)
        on left: 44 45 46 47
        on right: 23 46 47
    expr_block <expressions> (59)
        on left: 48 49
        on right: 22 49
    dispatch_expression <expression> (60)
        on left: 50 51 52
        on right: 19
    exprs <expressions> (61)
        on left: 53 54 55
        on right: 50 51 52 55


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID INHERITS TYPEID '{' features '}'
    5      | CLASS . TYPEID '{' features '}'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . INHERITS TYPEID '{' features '}'
    5      | CLASS TYPEID . '{' features '}'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    4 class: CLASS TYPEID INHERITS . TYPEID '{' features '}'

    TYPEID  shift, and go to state 10


State 9

    5 class: CLASS TYPEID '{' . features '}'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (features)]
    $default  reduce using rule 6 (features)

    features            go to state 12
    feature             go to state 13
    method_declaration  go to state 14
    attr_declaration    go to state 15


State 10

    4 class: CLASS TYPEID INHERITS TYPEID . '{' features '}'

    '{'  shift, and go to state 16


State 11

   11 method_declaration: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}'
   12 attr_declaration: OBJECTID . ':' TYPEID
   13                 | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 12

    5 class: CLASS TYPEID '{' features . '}'
    8 features: features . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 19

    feature             go to state 20
    method_declaration  go to state 14
    attr_declaration    go to state 15


State 13

    7 features: feature . ';'

    ';'  shift, and go to state 21


State 14

    9 feature: method_declaration .

    $default  reduce using rule 9 (feature)


State 15

   10 feature: attr_declaration .

    $default  reduce using rule 10 (feature)


State 16

    4 class: CLASS TYPEID INHERITS TYPEID '{' . features '}'

    OBJECTID  shift, and go to state 11

    OBJECTID  [reduce using rule 6 (features)]
    $default  reduce using rule 6 (features)

    features            go to state 22
    feature             go to state 13
    method_declaration  go to state 14
    attr_declaration    go to state 15


State 17

   11 method_declaration: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 14 (formals)

    formals  go to state 24
    formal   go to state 25


State 18

   12 attr_declaration: OBJECTID ':' . TYPEID
   13                 | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 26


State 19

    5 class: CLASS TYPEID '{' features '}' .

    $default  reduce using rule 5 (class)


State 20

    8 features: features feature . ';'

    ';'  shift, and go to state 27


State 21

    7 features: feature ';' .

    $default  reduce using rule 7 (features)


State 22

    4 class: CLASS TYPEID INHERITS TYPEID '{' features . '}'
    8 features: features . feature ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 28

    feature             go to state 20
    method_declaration  go to state 14
    attr_declaration    go to state 15


State 23

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 29


State 24

   11 method_declaration: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}'
   16 formals: formals . ',' formal

    ')'  shift, and go to state 30
    ','  shift, and go to state 31


State 25

   15 formals: formal .

    $default  reduce using rule 15 (formals)


State 26

   12 attr_declaration: OBJECTID ':' TYPEID .
   13                 | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 12 (attr_declaration)


State 27

    8 features: features feature ';' .

    $default  reduce using rule 8 (features)


State 28

    4 class: CLASS TYPEID INHERITS TYPEID '{' features '}' .

    $default  reduce using rule 4 (class)


State 29

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 33


State 30

   11 method_declaration: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 34


State 31

   16 formals: formals ',' . formal

    OBJECTID  shift, and go to state 23

    formal  go to state 35


State 32

   13 attr_declaration: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 50
    dispatch_expression  go to state 51


State 33

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 34

   11 method_declaration: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 52


State 35

   16 formals: formals ',' formal .

    $default  reduce using rule 16 (formals)


State 36

   20 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 53
    dispatch_expression  go to state 51


State 37

   23 expr: LET . let_expr

    OBJECTID  shift, and go to state 54

    let_expr  go to state 55


State 38

   21 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 56
    dispatch_expression  go to state 51


State 39

   24 expr: CASE . expr OF branches ESAC

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 57
    dispatch_expression  go to state 51


State 40

   25 expr: NEW . TYPEID

    TYPEID  shift, and go to state 58


State 41

   26 expr: ISVOID . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 59
    dispatch_expression  go to state 51


State 42

   39 expr: STR_CONST .

    $default  reduce using rule 39 (expr)


State 43

   38 expr: INT_CONST .

    $default  reduce using rule 38 (expr)


State 44

   40 expr: BOOL_CONST .

    $default  reduce using rule 40 (expr)


State 45

   18 expr: OBJECTID . ASSIGN expr
   37     | OBJECTID .
   52 dispatch_expression: OBJECTID . '(' exprs ')'

    ASSIGN  shift, and go to state 60
    '('     shift, and go to state 61

    $default  reduce using rule 37 (expr)


State 46

   35 expr: NOT . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 62
    dispatch_expression  go to state 51


State 47

   31 expr: '~' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 63
    dispatch_expression  go to state 51


State 48

   22 expr: '{' . expr_block '}'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 64
    expr_block           go to state 65
    dispatch_expression  go to state 51


State 49

   36 expr: '(' . expr ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 66
    dispatch_expression  go to state 51


State 50

   13 attr_declaration: OBJECTID ':' TYPEID ASSIGN expr .
   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 13 (attr_declaration)


State 51

   19 expr: dispatch_expression .

    $default  reduce using rule 19 (expr)


State 52

   11 method_declaration: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 76


State 53

   20 expr: IF expr . THEN expr ELSE expr FI
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    THEN  shift, and go to state 77
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 54

   44 let_expr: OBJECTID . ':' TYPEID ASSIGN expr IN expr
   45         | OBJECTID . ':' TYPEID IN expr
   46         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr
   47         | OBJECTID . ':' TYPEID ',' let_expr

    ':'  shift, and go to state 78


State 55

   23 expr: LET let_expr .

    $default  reduce using rule 23 (expr)


State 56

   21 expr: WHILE expr . LOOP expr POOL
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    LOOP  shift, and go to state 79
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 57

   24 expr: CASE expr . OF branches ESAC
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    OF   shift, and go to state 80
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


State 58

   25 expr: NEW TYPEID .

    $default  reduce using rule 25 (expr)


State 59

   26 expr: ISVOID expr .
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 26 (expr)


State 60

   18 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 81
    dispatch_expression  go to state 51


State 61

   52 dispatch_expression: OBJECTID '(' . exprs ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    $default  reduce using rule 53 (exprs)

    expr                 go to state 82
    dispatch_expression  go to state 51
    exprs                go to state 83


State 62

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   35     | NOT expr .
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 35 (expr)


State 63

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   31     | '~' expr .
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 31 (expr)


State 64

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   48 expr_block: expr . ';'
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 84


State 65

   22 expr: '{' expr_block . '}'
   49 expr_block: expr_block . expr ';'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '}'         shift, and go to state 85
    '('         shift, and go to state 49

    expr                 go to state 86
    dispatch_expression  go to state 51


State 66

   27 expr: expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   36     | '(' expr . ')'
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ')'  shift, and go to state 87


State 67

   33 expr: expr LE . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 88
    dispatch_expression  go to state 51


State 68

   32 expr: expr '<' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 89
    dispatch_expression  go to state 51


State 69

   34 expr: expr '=' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 90
    dispatch_expression  go to state 51


State 70

   27 expr: expr '+' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 91
    dispatch_expression  go to state 51


State 71

   28 expr: expr '-' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 92
    dispatch_expression  go to state 51


State 72

   29 expr: expr '*' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 93
    dispatch_expression  go to state 51


State 73

   30 expr: expr '/' . expr

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 94
    dispatch_expression  go to state 51


State 74

   50 dispatch_expression: expr '@' . TYPEID '.' OBJECTID '(' exprs ')'

    TYPEID  shift, and go to state 95


State 75

   51 dispatch_expression: expr '.' . OBJECTID '(' exprs ')'

    OBJECTID  shift, and go to state 96


State 76

   11 method_declaration: OBJECTID '(' formals ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 97
    dispatch_expression  go to state 51


State 77

   20 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 98
    dispatch_expression  go to state 51


State 78

   44 let_expr: OBJECTID ':' . TYPEID ASSIGN expr IN expr
   45         | OBJECTID ':' . TYPEID IN expr
   46         | OBJECTID ':' . TYPEID ASSIGN expr ',' let_expr
   47         | OBJECTID ':' . TYPEID ',' let_expr

    TYPEID  shift, and go to state 99


State 79

   21 expr: WHILE expr LOOP . expr POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expr                 go to state 100
    dispatch_expression  go to state 51


State 80

   24 expr: CASE expr OF . branches ESAC

    OBJECTID  shift, and go to state 101

    branches  go to state 102
    branch    go to state 103


State 81

   18 expr: OBJECTID ASSIGN expr .
   27     | expr . '+' expr
   28     | expr . '-' expr
   29     | expr . '*' expr
   30     | expr . '/' expr
   32     | expr . '<' expr
   33     | expr . LE expr
   34     | expr . '=' expr
   50 dispatch_expression: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   51                    | expr . '.' OBJECTID '(' exprs ')'
